# pgfSweave

./: .Rinstignore  ChangeLog  DESCRIPTION  NAMESPACE  NEWS  OREADME.md  README  README.md  configure.ac
R/: cacheSweaveUnexportedFunctions.R  pgfSweave.R  pgfSweaveDriver.R  utilities.R  zzz.R
exec/: DESCRIPTION  NAMESPACE  install-script.R  pgfSweave  pgfsweave  pgfsweave-script.R
exec/exec/: pgfSweave
exec/inst/doc/: pgfSweave-vignette.Rnw
exec/inst/java/eps2pgf/: NOTICE.txt  README.txt
exec/inst/misc/vignette-src/: Makefile
inst/: COPYING  NOTES
inst/doc/: fig-pgfSweave-hist.pgf  fig-pgfSweave-tikz-hist.tikz  pgfSweave-example-Rnw.in  pgfSweave-example-tex.in  pgfSweave-vignette.Rnw  pgfSweave.Rnw  pgfSweave.pgf  pgfSweave_hans.Rnw  third.R  wave.R
inst/doc/figs/: fig-pgfSweave-hist.pgf  fig-pgfSweave-tikz-hist.tikz
inst/example/: Makefile  caching.Rnw  pgfSweave-example.Rnw  pgfSweave-example.tex  pgfSweave-latex-example.Rnw  pgfSweave-xelatex-example.Rnw
inst/java/eps2pgf/lib/: LICENSE_FontBox.txt
inst/java/eps2pgf/resources/: fontSubstitution.xml
inst/misc/: pgfsweave  test-for-pgf.tex
inst/misc/src/: pgfSweave-vignette.Rnw
inst/misc/svn2cl-0.11/: ChangeLog
inst/misc/vignette-src/: Makefile  fig-pgfSweave-hist.eps  fig-pgfSweave-hist.pgf  fig-pgfSweave-tikz-hist.tikz  pgfSweave-vignette-source.Rnw  pgfSweave-vignette.Rnw
inst/tests/: Makefile  tidy.Rnw  tidy2.Rnw
inst/vignettes/: pgfSweave-example-tex.in  pgfSweave.Rnw
man/: pgfSweave.Rd  pgfSweaveDriver.Rd
src/: Makevars  Makevars.in  Makevars.win  dummy.c
(+16 files in other folders)
