AC_INIT([pgfSweave],0.7.2) dnl Autonconf comments sure are wierd...

dnl install a custon script into R\'s bin
dnl directory.

dnl Create Makevars

AC_CONFIG_FILES([src/Makevars])

dnl Recover path to R, no idea what the beginning colon
dnl is for, but is is necessary.

: ${R_HOME=`R RHOME`}

AC_OUTPUT
